--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "liveServer.settings.port": 5501,
     "files.watcherExclude": {
         "**/target": true
-    }
+    },
+    "phpserver.phpConfigPath": "C:\\Program Files\\php-8.1.30",
+    "phpserver.autoOpenOnReload": true,
+    "phpserver.phpPath": "C:\\Program Files\\php-8.1.30\\php.exe"
 }
